# dominique-native

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt  flake.nix  vcpkg.json
examples/: examples.cmake  main.cpp
res/shaders/: baseFragment.glsl  baseVertex.glsl
src/: main.cpp
src/DEngine/: common.h  core.cpp  core.h  coreDX11.cpp  coreGL.cpp  coreVK.cpp  graphics.h  sdl_helpers.cpp  sdl_helpers.h  spdlog_helper.cpp  spdlog_helper.h
src/DEngine/Drawable/: drawable.cpp  drawable.h
src/DEngine/components/: camera.hpp  material.hpp  types.hpp
src/DEngine/dx11/: coreDX11.cpp  coreDX11.h  dx11_helpers.cpp  dx11_helpers.h  shaders.h
src/DEngine/ecs/: ecs.hpp
src/DEngine/openGL/: coreGL.cpp  coreGL.h  shaders.h
src/DEngine/openGL/renderer/: renderer.cpp  renderer.h
src/DEngine/utils/: fileLoader.cpp  fileLoader.h  uuid.h
src/dengine/: core.cpp  core.h  sdl_helpers.cpp  sdl_helpers.h  spdlog_helper.cpp  spdlog_helper.h
src/dengine/components/: mesh.hpp  scriptable.hpp  transform.hpp
src/dengine/ecs/: ecs.hpp
src/dengine/openGL/: coreGL.cpp
src/dengine/openGL/renderer/: renderer.cpp  renderer.h
src/dengine/utils/: fileLoader.cpp  uuid.cpp  uuid.h
